--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -62,6 +62,7 @@
     <Compile Include="MainClass\Cls_DbConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainClass\Program.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="UI\Frm_login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +90,7 @@
     <EmbeddedResource Include="UI\Manufaktur\Frm_Manufaktur_Dashboard.resx">
       <DependentUpon>Frm_Manufaktur_Dashboard.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="MainClass\DiagramUtama.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
