--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -60,9 +60,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MainClass\Cls_Barang.cs" />
     <Compile Include="MainClass\Cls_Security.cs" />
     <Compile Include="MainClass\Cls_Login.cs" />
     <Compile Include="MainClass\Cls_DbConnection.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainClass\Program.cs" />
     <Compile Include="Settings.cs" />
@@ -72,11 +74,17 @@
     <Compile Include="UI\Frm_login.Designer.cs">
       <DependentUpon>Frm_login.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Manufaktur\Frm_Manufaktur_Dashboard.cs">
+    <Compile Include="UI\Dashboard\Frm_Manufaktur_Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Manufaktur\Frm_Manufaktur_Dashboard.Designer.cs">
+    <Compile Include="UI\Dashboard\Frm_Manufaktur_Dashboard.Designer.cs">
       <DependentUpon>Frm_Manufaktur_Dashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Master\ManajemenBarang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Master\ManajemenBarang.Designer.cs">
+      <DependentUpon>ManajemenBarang.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -91,8 +99,11 @@
     <EmbeddedResource Include="UI\Frm_login.resx">
       <DependentUpon>Frm_login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Manufaktur\Frm_Manufaktur_Dashboard.resx">
+    <EmbeddedResource Include="UI\Dashboard\Frm_Manufaktur_Dashboard.resx">
       <DependentUpon>Frm_Manufaktur_Dashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Master\ManajemenBarang.resx">
+      <DependentUpon>ManajemenBarang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="MainClass\DiagramUtama.cd" />
