--- a/SupplyChainManagement_S1/Properties/Settings.settings
+++ b/SupplyChainManagement_S1/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="S_LEVEL" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="S_TYPE" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
