--- a/SupplyChainManagement_S1/app.config
+++ b/SupplyChainManagement_S1/app.config
@@ -19,6 +19,9 @@
             <setting name="S_LEVEL" serializeAs="String">
                 <value />
             </setting>
+            <setting name="S_TYPE" serializeAs="String">
+                <value />
+            </setting>
         </SupplyChainManagement_S1.Properties.Settings>
     </userSettings>
 </configuration>
