--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -60,11 +60,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cls_Supplier.cs" />
     <Compile Include="MainClass\Cls_Barang.cs" />
     <Compile Include="MainClass\Cls_Security.cs" />
     <Compile Include="MainClass\Cls_Login.cs" />
     <Compile Include="MainClass\Cls_DbConnection.cs" />
-    <Compile Include="Model.cs" />
+    <Compile Include="MainClass\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MainClass\Program.cs" />
     <Compile Include="Settings.cs" />
@@ -74,17 +75,17 @@
     <Compile Include="UI\Frm_login.Designer.cs">
       <DependentUpon>Frm_login.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Dashboard\Frm_Manufaktur_Dashboard.cs">
+    <Compile Include="UI\Dashboard\Frm_DashboardManufaktur.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Dashboard\Frm_Manufaktur_Dashboard.Designer.cs">
-      <DependentUpon>Frm_Manufaktur_Dashboard.cs</DependentUpon>
+    <Compile Include="UI\Dashboard\Frm_DashboardManufaktur.Designer.cs">
+      <DependentUpon>Frm_DashboardManufaktur.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Master\ManajemenBarang.cs">
+    <Compile Include="UI\Master\Frm_ManajemenBarang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Master\ManajemenBarang.Designer.cs">
-      <DependentUpon>ManajemenBarang.cs</DependentUpon>
+    <Compile Include="UI\Master\Frm_ManajemenBarang.Designer.cs">
+      <DependentUpon>Frm_ManajemenBarang.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,11 +100,11 @@
     <EmbeddedResource Include="UI\Frm_login.resx">
       <DependentUpon>Frm_login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Dashboard\Frm_Manufaktur_Dashboard.resx">
-      <DependentUpon>Frm_Manufaktur_Dashboard.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Dashboard\Frm_DashboardManufaktur.resx">
+      <DependentUpon>Frm_DashboardManufaktur.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Master\ManajemenBarang.resx">
-      <DependentUpon>ManajemenBarang.cs</DependentUpon>
+    <EmbeddedResource Include="UI\Master\Frm_ManajemenBarang.resx">
+      <DependentUpon>Frm_ManajemenBarang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="MainClass\DiagramUtama.cd" />
