--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -61,13 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cls_Supplier.cs" />
-    <Compile Include="MainClass\Cls_Barang.cs" />
-    <Compile Include="MainClass\Cls_Security.cs" />
-    <Compile Include="MainClass\Cls_Login.cs" />
-    <Compile Include="MainClass\Cls_DbConnection.cs" />
-    <Compile Include="MainClass\Model.cs" />
+    <Compile Include="MainClass\App_Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MainClass\Program.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="UI\Frm_login.cs">
       <SubType>Form</SubType>
@@ -107,7 +102,6 @@
       <DependentUpon>Frm_ManajemenBarang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="MainClass\DiagramUtama.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
