--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>SupplyChainManagement_S1.MainScript.Program</StartupObject>
+    <StartupObject>SupplyChainManagement_S1.MainScript.Main_app</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Cls_Supplier.cs" />
     <Compile Include="MainClass\App_Data.cs" />
+    <Compile Include="MainClass\Main_app.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="UI\Frm_login.cs">
