--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>SupplyChainManagement_S1.MainScript.Main_app</StartupObject>
+    <StartupObject>SupplyChainManagement_S1.MainScript.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a, processorArchitecture=MSIL">
@@ -61,9 +61,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cls_Supplier.cs" />
-    <Compile Include="MainClass\App_Data.cs" />
-    <Compile Include="MainClass\Main_app.cs" />
+    <Compile Include="MainClass\Cls_Barang.cs" />
+    <Compile Include="MainClass\Cls_Security.cs" />
+    <Compile Include="MainClass\Cls_Login.cs" />
+    <Compile Include="MainClass\Cls_DbConnection.cs" />
+    <Compile Include="MainClass\Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MainClass\Program.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="UI\Frm_login.cs">
       <SubType>Form</SubType>
@@ -103,6 +107,7 @@
       <DependentUpon>Frm_ManajemenBarang.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="MainClass\DiagramUtama.cd" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
