--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -77,6 +77,12 @@
     <Compile Include="UI\Main\Frm_Login.Designer.cs">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Manufaktur\Frm_SPBahanBaku.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_SPBahanBaku.Designer.cs">
+      <DependentUpon>Frm_SPBahanBaku.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Main\Frm_Login.resx">
       <DependentUpon>Frm_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Manufaktur\Frm_SPBahanBaku.resx">
+      <DependentUpon>Frm_SPBahanBaku.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
