--- a/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
+++ b/SupplyChainManagement_S1/SupplyChainManagement_S1.csproj
@@ -77,11 +77,35 @@
     <Compile Include="UI\Main\Frm_Login.Designer.cs">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Distributor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Distributor.Designer.cs">
+      <DependentUpon>Frm_Distributor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_JadwalProduksi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_JadwalProduksi.Designer.cs">
+      <DependentUpon>Frm_JadwalProduksi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Produksi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Produksi.Designer.cs">
+      <DependentUpon>Frm_Produksi.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Manufaktur\Frm_SPBahanBaku.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\Manufaktur\Frm_SPBahanBaku.Designer.cs">
       <DependentUpon>Frm_SPBahanBaku.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Supplier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Manufaktur\Frm_Supplier.Designer.cs">
+      <DependentUpon>Frm_Supplier.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,8 +123,20 @@
     <EmbeddedResource Include="UI\Main\Frm_Login.resx">
       <DependentUpon>Frm_Login.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Manufaktur\Frm_Distributor.resx">
+      <DependentUpon>Frm_Distributor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Manufaktur\Frm_JadwalProduksi.resx">
+      <DependentUpon>Frm_JadwalProduksi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Manufaktur\Frm_Produksi.resx">
+      <DependentUpon>Frm_Produksi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Manufaktur\Frm_SPBahanBaku.resx">
       <DependentUpon>Frm_SPBahanBaku.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Manufaktur\Frm_Supplier.resx">
+      <DependentUpon>Frm_Supplier.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
